--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Selenium
+application.vendor=Lenovo-Yoga2
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Selenium.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.apache-mime4j-0.6.jar=E:\\Eclipse\\eclipse-java-mars-2-win32-x86_64\\selenium-java-2.52.0\\selenium-2.52.0\\libs\\apache-mime4j-0.6.jar
 file.reference.bsh-2.0b4.jar=E:\\Eclipse\\eclipse-java-mars-2-win32-x86_64\\selenium-java-2.52.0\\selenium-2.52.0\\libs\\bsh-2.0b4.jar
@@ -158,7 +160,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=selenium.Selenium
+main.class=Student1732MD.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
