--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -206,7 +206,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Student1760MD.Main
+main.class=Student1732MD.MainClass
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
