--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /build/
+/nbproject/private/config.properties 
+/nbproject/private/private.properties 
+/nbproject/private/private.xml 
+/nbproject/project.properties 
+/nbproject/project.xml 
